--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@popperjs/core": "2.11.8",
     "apexcharts": "3.49.2",
     "bootstrap": "5.3.3",
+    "chart.js": "^4.5.0",
     "ng-apexcharts": "1.11.0",
+    "ng2-charts": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-scrollbar": "16.1.1",
     "pdfmake": "^0.2.20",
