--- a/angular.json
+++ b/angular.json
@@ -34,12 +34,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
           "configurations": {
             "production": {
               "budgets": [
-                {
+                { 
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "2mb"
