--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "@ng-select/ng-select": "^14.9.0",
     "@popperjs/core": "2.11.8",
     "apexcharts": "3.49.2",
-    "bootstrap": "5.3.3",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.5.0",
-    "ng-apexcharts": "1.11.0",
     "ng2-charts": "^8.0.0",
     "ngx-bootstrap": "^19.0.2",
     "ngx-scrollbar": "16.1.1",
+    "ngx-toastr": "^19.0.0",
     "pdfmake": "^0.2.20",
     "rxjs": "~7.8.1",
     "sweetalert2": "^11.21.0",
